src/main/java/com/example/incidentplatform/common/error/UnauthorizedException.java
package com.example.incidentplatform.common.error;

public class UnauthorizedException extends RuntimeException {
    public UnauthorizedException(String message) {
        super(message);
    }
}
